18208
Take this simple piece of code which works fine:

{code}
import scala.language.dynamics

class Foo extends Dynamic {
  def selectDynamic(s: String) {}
}

def bar {
  (new Foo).foo
  //Seq(Seq(): _*)
}
{code}

Uncommenting the line with the wildcard vararg call (no matter if it occurs before or after the otherwise working selectDynamic call) makes it fail with the following error:

{code}
/Users/szeiger/code/stest/dynamicsvarags.scala:8: error: applyDynamic does not support passing a vararg parameter
  (new Foo).foo
            ^
one error found
{code}
